terraform and file structures

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 analysis/input
+analysis/data_manipulation/*
+*.DS_STORE
+__pycache__/
+analysis/utils/__pycache__/*
+
+#Terraform
+*.terraform.lock.hcl
+*.terraform
+tf/.terraform/*
+tf/.terraform.lock.hcl
+*.backup
+terraform/.gitignore
+*.tfstate
