--- a/.github/workflows/build_utils.yml
+++ b/.github/workflows/build_utils.yml
@@ -1,18 +1,18 @@
-name: Pytest
+name: Build Utils
 on: [workflow_call,push, pull_request, workflow_dispatch]
 
 jobs:
-  build:
-    uses: ./.github/workflows/build_utils.yml
   pytest:
-    name: test
-    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.9.0
+          python-version: 3.8.0
           cache: pip
+      - name: Poetry Build
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: 1.6.1
       - run: pip install -r requirements.txt
-      - run: pytest
+      - run: cd analysis/utils && poetry build
