--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,5 +1,5 @@
 name: Upload Prepare Script
-on: [workflow_call, push, pull_request, workflow_dispatch]
+on: [ push, pull_request ]
 
 env:
   AWS_DEFAULT_REGION: us-east-1
