--- a/.github/workflows/build_utils.yml
+++ b/.github/workflows/build_utils.yml
@@ -1,3 +1,4 @@
+name: Build
 on: [ workflow_call ]
 
 jobs:
@@ -7,11 +8,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.10.9
+          python-version: 3.8.15
           cache: pip
       - name: Poetry Build
         uses: abatilo/actions-poetry@v2
         with:
           poetry-version: 1.6.1
-      - run: pip install -r requirements.txt
+      - run: pip install -r analysis/requirements.txt
       - run: cd analysis/utils && poetry build
