--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.10.9
-          cache: pip
-      - run: pip install -r requirements.txt
+          python-version: 3.8.15
+      - run: pip install -r analysis/requirements.txt
       - run: pip install analysis/utils/dist/pydata_engine_utils-0.1.0-py3-none-any.whl
       - run: pytest
